--- a/style/add-product/add-product.css
+++ b/style/add-product/add-product.css
@@ -364,9 +364,6 @@
 
 .form__img-wrapper {
   position: relative;
-}
-
-.form__img-wrapper {
   width: 100px;
   height: 100px;
   display: flex;
@@ -374,7 +371,7 @@
 }
 
 .form__img-wrapper--mask::before {
-  content: url(/M5_CRM-m6u8/icons/btn-img-del.svg);
+  content: url(/icons/btn-img-del.svg);
   padding-top: calc(50% - 15px);
   padding-left: calc(50% - 11.5px);
   position: absolute;
@@ -385,6 +382,7 @@
   height: 100%;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
   z-index: 1;
+  cursor: pointer;
 } 
 
 @media (max-width: 690px) {
